# analysis_control

./: .gitignore  Dockerfile  MSTrees.py  MSTrees2.py  README.md  api.yaml  api_spec.yaml  config_example.yaml  docker-compose.yml  example_config.yaml  generate_newick.py  main.py  models.py  profile_diff_example.json  pyproject.toml
app/: json_writer.py  main.py  models.py
commands/: generate_newick.py  grapetree_cli.py
docs/: Processing_API.md
fake_cluster_commands/: checkjob  last_pid.template  qsub
rest_app/: config_example.yaml  distance_matrix_test.py  hpc.py  main.py  models.py
test_data/: A.baumannii.tsv  Achromobacter.profile  Achromobacter.profile.works  Achromobacter.tsv  C.fetus.tsv  E.cloacae.tsv  S.aureus.tsv  Salmonella.tsv
tests/: generate_fake_distance_matrix.py  test_rest_app.py
tests/manual/: ssh.py
