[tool.poetry]
name = "rest_app"
version = "0.1.0"
description = ""
authors = ["Finn Gruwier Larsen <finn@gruwier.dk>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
grapetree = "^2.2"
pandas = "^1.2.3"
redis = "^3.5.3"
pymongo = "^3.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
fastapi-code-generator = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
