[tool.poetry]
name = "analysis_control"
version = "0.1.0"
description = ""
authors = ["Finn Gruwier Larsen <figl@ssi.dk>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
grapetree = "^2.2"
pandas = "^1.3.3"
PyYAML = "^5.4.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
