[tool.poetry]
name = "rest_app"
version = "0.1.0"
description = ""
authors = ["Finn Gruwier Larsen <figl@ssi.dk>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
grapetree = "^2.2"
pandas = "^1.2.3"
PyYAML = "^5.4.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Faker = "^8.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
